src-ken&y/objects/Agreement__c.object
<CustomObject>
    <customHelpPage>HelpAgreement</customHelpPage>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <inlineHelpText>This date will let the billing engine know to pick up fulfillment lines for consolidated billing.</inlineHelpText>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Code__c</fullName>
        <externalId>true</externalId>
        <label>Agreement Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Agreement</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bill to Customer: Record TypeEQUALSBill To</inlineHelpText>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreements (Bill To)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements_Billing_UOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <description>Customer&apos;s Purchase Order Number</description>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Corporate_Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency_Number__c</fullName>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Period__c</fullName>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Deprecated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <label>Recurrence Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((4 AND 2) OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sold_To__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Sold_To__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreements (Ship To)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Ship_To__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreements (Site)</relationshipLabel>
        <relationshipName>Agreements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((4 AND 2) OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Bill_To__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Bill_To__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreements (Sold To)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Line_Value__c</fullName>
        <label>Total Line Value</label>
        <summarizedField>Agreement_Line__c.Line_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Agreement_Line__c.Revision_Status__c</field>
            <operation>notEqual</operation>
            <value>Pending Approval</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Agreement_Line__c.Revision_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Agreement_Line__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company__c</columns>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Code__c</columns>
        <columns>Customer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Currency__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_change_agreement_status</fullName>
        <active>true</active>
        <description>Validation rule to prevent agreement status change to draft from approved</description>
        <errorConditionFormula>AND(ISCHANGED( Status__c ),
ISPICKVAL(PRIORVALUE (Status__c), &apos;Approved&apos;),
ISPICKVAL(Status__c, &apos;Draft&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot change the status of an approved agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_save_agreement</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorMessage>The End Date cannot be set before the Start Date. Select a different date to continue.</errorMessage>
    </validationRules>
</CustomObject>